# orenda

./: .gitignore  CMakeLists.txt  LICENCE_Exhibit_A.txt  README.md
docs/languages/: python.md
docs/notes/: arrays.md  assembly.md  comments.md  deprecation.md  expressions.md  ffi.md  functions.md  grammar.md  literals.md  memory-safety.md  modules.md  names.md  parallelism-concurrency.md  pm.md  reference-types.md  repl.md  strings.md  target-spoecifics.md  type-system.md  what-i-want.md
docs/notes/lexical-elements/: comments.md  literals.md  strings.md  textual-data.md
docs/notes/oberon/: basing-on-oberon2.md  oberon-2.ebnf  test.ebnf
docs/notes/type-system/: arrays.md  intro.md  ranges.md  reference-types.md  reflection.md  type-theory.md  types.md
samples/: exprs.exp  module1.exm  module1.om  scanner.txt  sum.exp
src/: CMakeLists.txt  ExperimentalLexer.g4  ExperimentalParser.g4  OrendaLexer.g4  OrendaParser.g4  main.cpp
vscode/experimental-language/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
vscode/experimental-language/syntaxes/: experimental.tmLanguage.json
